Applied what was previously html{} padding onto #page to prevent the headers and footers from covering up content.

--- a/css/screen.css
+++ b/css/screen.css
@@ -189,9 +189,7 @@ html {
   line-height:1.20em; /*20.5px  120%*/
   color: #000;
   background: #f5f5f5;
-  padding: 1.20em 0.75em;
-  padding-top: 0;
-  
+/*padding: 0em 0.75em 0.75em 0.75em;*/
 }
 
 h2 {
@@ -282,6 +280,7 @@ nav a:hover {
 }
 
 #page {
+  padding: 0.75em 0.75em 3.75em 0.75em; /* bottom needs more padding to overcome footer */
   transition: margin-left 1s;
 }
 #login {
